# SpecReader

./: .gitignore  MANIFEST.in  README.md  df_constructor.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  spec_pars.py  tox.ini
.github/workflows/: tests.yml
data/: __init__.py  df_constructor.py  spec_gui.py  spec_pars.py
reader/: __init__.py  __main__.py  core.py  df_constructor.py  exceptions.py  log_writer.py  main.py  plot.py  reader_core.py  reader_logger.py  reader_plot.py
reader/simulator/: collector.py
src/: __init__.py  config.py  main.py  reader_core.py  reader_logger.py  reader_plot.py  runner.py
src/processor/: data_parser.py
tests/: __init__.py  reader_tests.py  sample_0.spe  sample_1.spe  test_reader.py
