[metadata]
name = spec-reader
version = 0.1.7
description = The spectrum reader
long_description = file: README.md
long_description_content_type = text/markdown
keywords = reader, spectrum, radiation
author = Alex Dvornik
url = https://github.com/ADv0rnik/SpecReader.git
license = MIT
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:

include_package_data = True

install_requires =
    art>=5.6
    pandas>=1.4.3
    matplotlib>=3.5.2
    tqdm>=4.64.0
    setuptools>=64.0.3
python_requires = >=3.8

[options.package_data]
reader =
    *.spe
reader.data =
    *.*

[options.entry_points]
console_scripts =
    spec-reader = reader.main:runner

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    flake8>=3.9
    tox>=3.24
