[metadata]
name = spec-reader
version = 0.2.1
description = The spectrum reader
long_description = file: README.md
long_description_content_type = text/markdown
keywords = reader, spectrum, radiation
author = Alex Dvornik
url = https://github.com/ADv0rnik/SpecReader.git
license = MIT
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:

include_package_data = True

install_requires =
    art
    pandas
    matplotlib
    setuptools

[options.package_data]
reader =
    *.spe
reader.data =
    *.*

[options.entry_points]
console_scripts =
    spec-reader = src.main:runner

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    flake8>=3.9
    tox>=3.24

[tool:pytest]
minversion = 7.0
testpaths = tests
